# visual-score-engine

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: chops_module.cpp  chops_module.h  engine_state.h  glad.c  main.cpp  pattern_1.cpp  pattern_1.h  pattern_1_blur.cpp  pattern_1_blur.h  pattern_1_blur_h  pattern_2.cpp  pattern_2.h
